fixed styling divs- remove float left display flex  property from productCard and display inline-block, align text center for outer Products

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 }
 
 .productCards {
+    text-align: 'center';
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
 }
